[package]
name = "icns"
version = "0.1.1"
authors = ["Jack Mordaunt <jackmordaunt@gmail.com>"]
edition = "2018"

[lib]
name = "icns"
path = "src/lib.rs"

[[bin]]
name = "icnsify"
path = "src/main.rs"

[dependencies]
image = "0.22.1"
byteorder = "1.3.2"
rayon = "1.1.0"
clap = "2.33.0"
deflate = "0.7.20"

[dependencies.png]
git = "https://github.com/JackMordaunt/image-png.git"
branch = "deflate/specify-compression"

# [dependencies.png]
# path = "../../forks/image-png"

[dev-dependencies]
clap = "2.33.0"
num-complex = "0.2.3"