[package]
name = "icns"
version = "0.1.1"
authors = ["Jack Mordaunt <jackmordaunt@gmail.com>"]
edition = "2018"

[lib]
name = "icns"
path = "src/lib.rs"

[[bin]]
name = "icnsify"
path = "src/main.rs"

[dependencies]
image = "0.23.0"
byteorder = "1.3.4"
rayon = "1.3.0"
clap = "2.33.0"
deflate = "0.8.3"
png = "0.16.1"

[dev-dependencies]
clap = "2.33.0"
num-complex = "0.2.4"
